Contrast error fix attempt.

--- a/styles/myownstyle.css
+++ b/styles/myownstyle.css
@@ -63,7 +63,7 @@ h1, li, p {
 
   .footer-wrap {
     font-size: 18px;
-    color: orange;
+    color: #9f2305;
     text-align: center;
     padding: 10px;
     font-family: "Lucida Console", "Courier New", monospace;
